--- a/cSharp-Algorithms/cSharp-Algorithms.csproj
+++ b/cSharp-Algorithms/cSharp-Algorithms.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HackerRank\DayFour.cs" />
     <Compile Include="HackerRank\DayThree.cs" />
     <Compile Include="HackerRank\DayTwo.cs" />
     <Compile Include="Program.cs" />
