--- a/cSharp-Algorithms/cSharp-Algorithms.csproj
+++ b/cSharp-Algorithms/cSharp-Algorithms.csproj
@@ -44,10 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeSignal\centuryFromYear.cs" />
-    <Compile Include="HackerRank\DayFive.cs" />
-    <Compile Include="HackerRank\DayFour.cs" />
-    <Compile Include="HackerRank\DayThree.cs" />
-    <Compile Include="HackerRank\DayTwo.cs" />
+    <Compile Include="HackerRank-30DaysOfCode\DayFive.cs" />
+    <Compile Include="HackerRank-30DaysOfCode\DayFour.cs" />
+    <Compile Include="HackerRank-30DaysOfCode\DayThree.cs" />
+    <Compile Include="HackerRank-30DaysOfCode\DayTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
