--- a/cSharp-Algorithms/cSharp-Algorithms.csproj
+++ b/cSharp-Algorithms/cSharp-Algorithms.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HackerRank-30DaysOfCode\Day6.cs" />
+    <Compile Include="HackerRank-30DaysOfCode\Day7.cs" />
     <Compile Include="HackerRank-30DaysOfCode\DayFive.cs" />
     <Compile Include="HackerRank-30DaysOfCode\DayFour.cs" />
     <Compile Include="HackerRank-30DaysOfCode\DayThree.cs" />
