--- a/cSharp-Algorithms/cSharp-Algorithms.csproj
+++ b/cSharp-Algorithms/cSharp-Algorithms.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HackerRank\DayNine.cs" />
     <Compile Include="HackerRank\DaySix.cs" />
     <Compile Include="HackerRank\DaySeven.cs" />
     <Compile Include="HackerRank\DayEight.cs" />
