--- a/cSharp-Algorithms/cSharp-Algorithms.csproj
+++ b/cSharp-Algorithms/cSharp-Algorithms.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CodeSignal\Company Challenges\longestUnCorruptedSegments.cs" />
     <Compile Include="HackerRank\DayFive.cs" />
     <Compile Include="HackerRank\DayFour.cs" />
+    <Compile Include="HackerRank\DaySeven.cs" />
     <Compile Include="HackerRank\DaySix.cs" />
     <Compile Include="HackerRank\DayThree.cs" />
     <Compile Include="HackerRank\DayZero.cs" />
