--- a/cSharp-Algorithms/HackerRank-Challenges.csproj
+++ b/cSharp-Algorithms/HackerRank-Challenges.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CodeSignal\Company Challenges\longestUnCorruptedSegments.cs" />
     <Compile Include="HackerRank\DayEight.cs" />
+    <Compile Include="HackerRank\DayEleven.cs" />
     <Compile Include="HackerRank\DayFive.cs" />
     <Compile Include="HackerRank\DayFour.cs" />
     <Compile Include="HackerRank\DayNine.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="HackerRank\DaySix.cs" />
     <Compile Include="HackerRank\DayTen.cs" />
     <Compile Include="HackerRank\DayThree.cs" />
+    <Compile Include="HackerRank\DayTwelve.cs" />
     <Compile Include="HackerRank\DayZero.cs" />
     <Compile Include="HackerRank\DayTwo.cs" />
     <Compile Include="HackerRank\DayOne.cs" />
