Day 11 complete. Had some trouble seeing the pattern for the hourglasses i would be going through. Solved it successfully.

--- a/cSharp-Algorithms/HackerRank-Challenges.csproj
+++ b/cSharp-Algorithms/HackerRank-Challenges.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeSignal\Company Challenges\longestUnCorruptedSegments.cs" />
+    <Compile Include="HackerRank\Day13.cs" />
     <Compile Include="HackerRank\DayEight.cs" />
     <Compile Include="HackerRank\DayEleven.cs" />
     <Compile Include="HackerRank\DayFive.cs" />
